<resources>
    <string name="app_name">臻品购</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">首页</string>
    <string name="test_title">测试标题测试标题测试标题</string>
    <string name="test_content">测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容测试内容</string>
    <string name="no_more">没有更多了&#8230;</string>
    <string name="friend_circle">朋友圈</string>
    <string name="test_source">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</string>
    <string name="expand">展开详情</string>
    <string name="shrink">收起详情</string>
    <string name="please_open_network">请打开网络</string>
    <string name="request_time_out">请求超时</string>
    <string name="connect_fail">连接失败</string>
    <string name="we_chat_login">微信登录</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">姓名：</string>
    <string name="email">邮箱：</string>
    <string name="mobile">手机：</string>
    <string name="address_fill_in">地址：</string>
    <string name="submit">提交</string>
    <string name="main">首页</string>
    <string name="mine">我的</string>
    <string name="share">转发</string>
    <string name="no_pic">没有图片</string>
    <string name="prepare_pic">准备图片中</string>
    <string name="share_to">分享到</string>
    <string name="save_pic_fail_please_retry">保存图片失败，请重试！</string>
    <string name="normal_share">普通分享</string>
    <string name="compose_share">合成再分享</string>
    <string name="cancel">取消</string>
    <string name="time_to_end">据活动结束</string>
    <string name="end_time">结束时间</string>
    <string name="loading">加载中</string>
    <string name="no_permission_can_not_login">没有权限，无法登录</string>
    <string name="attention">关注</string>
    <string name="about">关于</string>
    <string name="shopping_cart">购物车</string>
    <string name="notice_content">公告:%s</string>
    <string name="user_nick">昵\t称：%s</string>
    <string name="user_phone">手机号：%s</string>
    <string name="user_id">用户编号：%s</string>
    <string name="edit">编辑</string>
    <string name="touch_re_try">轻触重试</string>
    <string name="member_status">会员状态</string>
    <string name="apply_to_agent">申请成为代理</string>
    <string name="contact_us">联系我们</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="log_out">退出登录</string>
    <string name="sure">确定</string>
    <string name="update_right_now">立即更新</string>
    <string name="ensure">确认无误</string>
    <string name="cancel_ensure">修改一下</string>
    <string name="ensure_user_info">姓名：%s\n手机：%s\n邮箱：%s</string>
    <string name="please_enter_correct_mobile">请输入正确的手机号码！</string>
    <string name="please_enter_correct_email">请输入正确的邮箱地址！</string>
    <string name="please_ensure_your_message">请确认您的信息!</string>
    <string name="please_wait_for_check">您的申请已经提交，请等待后台审核，谢谢</string>
    <string name="clear_cache_success">清除成功</string>
    <string name="are_you_sure_to_log_out">确定退出吗？</string>
    <string name="login_fail">登录失败！</string>
    <string name="congratulate_to_apply_success">恭喜您申请成功，您现在的身份升级为代理用户！</string>
    <string name="apply_reject_and_contact_us">您的申请被拒绝了，请联系我们重新申请成为代理用户</string>
    <string name="good_describe_already_copied">商品描述已复制</string>
    <string name="can_paste_on_we_chat_and_qq">1.点击\'去分享\'后若无微信和QQ选项，可在\'更多\'中打开\n2.商品描述已复制，可以长按\'粘贴\'</string>
    <string name="downloading">下载中</string>
    <string name="wait_for_download_complete">正在下载，请稍后&#8230;</string>
    <string name="download_fail">下载失败.</string>
    <string name="search_keyword">搜索关键字</string>
    <string name="search_empty_hint">很抱歉，根据您的关键字，没有搜索到神马</string>
    <string name="next_press_quit">再按一次退出</string>
    <string name="already_update_version">您当前已经是最新版本！</string>
    <string name="download_complete">下载完成！</string>
    <string name="current_version">当前版本:%s</string>
    <string name="size_cart_item">尺码:%s</string>
    <string name="charge_cart_item">¥%s</string>
    <string name="all_count">合计:¥</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="charge">结算</string>
    <string name="my_address">我的地址</string>
    <string name="my_order">我的订单</string>
    <string name="about_us">关于我们</string>
    <string name="set_default">设为默认</string>
    <string name="default_address">默认地址</string>
    <string name="address_management">地址管理</string>
    <string name="express_address">收货地址</string>
    <string name="add_address">新增地址</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="confirm_delete_address">确认删除地址吗？</string>
    <string name="set_to_default_address">设为默认地址</string>
    <string name="select_at_least_one">请至少勾选一件商品！</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="good_price">商品金额:</string>
    <string name="tip_pay_in_30_minute">提示:请在30分钟内进行支付，过期将自动释放</string>
    <string name="submit_order">提交订单</string>
    <string name="enter_order">填写订单</string>
    <string name="total_count">共%d件</string>
    <string name="total_fee">¥%s</string>
    <string name="real_fee">实付款:¥%s</string>
    <string name="save_and_quit">保存并推出</string>
    <string name="save_and_use">保存并使用</string>
    <string name="click_add_address">没有地址，请点击添加地址</string>
    <string name="order_no">订单号：%s</string>
    <string name="size">尺码:%s</string>
    <string name="pay_price">结算价:¥%s</string>
    <string name="cancel_order">取消订单</string>
    <string name="please_wait">请稍候</string>
    <string name="please_wait_for_check_order_status">请稍候，支付结果确认中</string>
    <string name="order_list">我的订单</string>
    <string name="go_pay">去付款</string>
    <string name="order_info">共%1d件商品 合计¥%2s元</string>
    <string name="buy">购买</string>
    <string name="get_into_cart">您选择的 %s 已加入购物车</string>
    <string name="attr_sold_out">很抱歉，您选择的尺码类型已售罄</string>
    <string name="please_select_size">请选择尺码类型！</string>
    <string name="wx_cancel_pay">取消支付</string>
    <string name="wx_error">错误，请重试！</string>
    <string name="add_order_fail">下单失败，请重试</string>
    <string name="ali_pay_cancel">取消了支付</string>
    <string name="ali_pay_not_install">你还未安装支付宝！</string>
    <string name="apply_agency_to_buy">您还不是代理用户，请申请成为代理以后再购买</string>
    <string name="confirm_add_to_shopping_cart">确认加入购物车？</string>
    <string name="hint_tip_to_shopping_cart">请输入商品备注信息</string>
    <string name="add_order_time">下单时间：%s</string>
    <string name="goods_price">商品金额：%s</string>
    <string name="remarks">备注：%s</string>
    <string name="order_detail">订单详情</string>
    <string name="remark_null">暂无</string>
    <string name="offline_pay">货到付款</string>
</resources>
