<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.cang.zhenpin.zhenpincang.ui.user.UserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_105"
        android:padding="@dimen/dp_15">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_75"
            android:layout_marginEnd="@dimen/dp_10"/>

        <TextView
            android:id="@+id/tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_nick"
            android:paddingTop="@dimen/dp_2_05"
            android:paddingBottom="@dimen/dp_2_05"
            android:layout_toEndOf="@+id/iv_avatar"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_phone"
            android:paddingTop="@dimen/dp_2_05"
            android:paddingBottom="@dimen/dp_2_05"
            android:layout_toEndOf="@+id/iv_avatar"
            android:layout_below="@id/tv_nick"/>

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:paddingTop="@dimen/dp_2_05"
            android:paddingBottom="@dimen/dp_2_05"
            android:layout_toEndOf="@+id/iv_avatar"
            android:layout_below="@id/tv_phone"/>

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:gravity="center"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentBottom="true">-->

            <!--<ImageView-->
                <!--android:layout_width="@dimen/dp_13"-->
                <!--android:layout_height="@dimen/dp_13"-->
                <!--android:src="@drawable/ic_edit"-->
                <!--android:layout_marginEnd="@dimen/dp_2_05"/>-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="@dimen/sp_12"-->
                <!--android:textColor="@drawable/selector_tab_text"-->
                <!--android:text="@string/edit"/>-->
        <!--</LinearLayout>-->
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_15"
                android:background="@color/grayLighter"/>

            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_address"
                    style="@style/linear_layout_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="@color/line"/>

            <LinearLayout
                android:id="@+id/ll_order"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order"
                    style="@style/linear_layout_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_15"
                android:background="@color/grayLighter"/>

            <LinearLayout
                android:id="@+id/ll_apply"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_to_agent"
                    style="@style/linear_layout_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="@color/line"/>

            <LinearLayout
                android:id="@+id/ll_status"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_status"
                    style="@style/linear_layout_text"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="@color/line"/>

            <LinearLayout
                android:id="@+id/ll_contact_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    style="@style/linear_layout_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="@color/line"/>

            <LinearLayout
                android:id="@+id/ll_check_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_update"
                    style="@style/linear_layout_text"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="@color/line"/>

            <LinearLayout
                android:id="@+id/ll_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache"
                    style="@style/linear_layout_text"/>

                <Space
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_file_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="@color/line"/>

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    style="@style/linear_layout_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_15"
                android:background="@color/grayLighter"/>

            <LinearLayout
                android:id="@+id/ll_log_out"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:orientation="horizontal"
                style="@style/linear_layout_ripple">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="@color/line"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
