<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/dp_10">

    <com.cang.zhenpin.zhenpincang.widget.RoundCornerImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        app:rect="@dimen/dp_2"
        android:background="@drawable/bg_avatar_corner"
        android:padding="@dimen/dp_1"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_toEndOf="@+id/iv_avatar"
        android:text="@string/test_title"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        android:textColor="@color/color_brand_title"/>

    <ImageView
        android:id="@+id/iv_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/selector_attention_tab"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_alignParentEnd="true"/>

    <com.cang.zhenpin.zhenpincang.widget.EllipsizingTextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_toEndOf="@+id/iv_avatar"
        app:maxExpandLines="5">

        <TextView
            android:id="@id/id_source_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_content"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@id/id_expand_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expand"
            android:background="@drawable/bg_shrink_expand"
            android:paddingTop="@dimen/dp_4"
            android:paddingBottom="@dimen/dp_4"
            android:textColor="@color/color_brand_title"
            android:textSize="@dimen/sp_14"/>

    </com.cang.zhenpin.zhenpincang.widget.EllipsizingTextView>


    <com.cang.zhenpin.zhenpincang.widget.ninegridlayout.ImgGridView
        android:id="@+id/img_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_toEndOf="@id/iv_avatar"
        app:spacing="@dimen/dp_5"/>

    <TextView
        android:id="@+id/tv_count_down_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_to_end"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:00:00"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12/05 03:00"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/img_view"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/share"
        android:textColor="@drawable/selector_tab_text"
        android:background="@drawable/bg_press_item"/>

    <LinearLayout
        android:id="@+id/layout_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/share"
        android:layout_toEndOf="@+id/iv_avatar"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="先选尺码，再按尺寸下单"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_tags"
                app:max_select="1"
                android:paddingBottom="@dimen/dp_24"/>

            <TextView
                android:id="@+id/tv_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:paddingStart="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_5"
                android:paddingTop="@dimen/dp_2"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:background="#C9C9C9"/>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
