<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/line_expert"
        android:padding="@dimen/dp_10"
        android:singleLine="true"
        android:text="@string/order_no"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:maxLines="2"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:singleLine="true"
                    android:text="@string/size"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:singleLine="true"
                    android:text="@string/pay_price"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@color/line_expert"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingBottom="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_20"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/cancel_order"/>
</LinearLayout>